# python-sdk

./: pyproject.toml
pacifica/: __init__.py  async_client.py  auth.py  client.py  client_optimized.py  exceptions.py  setup.py
pacifica/api/: base.py  base_async.py  exchange.py  exchange.py.bak  exchange_async.py  exchange_async.py.bak  info.py  info_async.py
pacifica/transformers/: account.py  base.py  exchange.py  market.py
tests/: conftest.py
tests/unit/: test_format_number.py  test_transformers_account.py  test_transformers_base.py  test_transformers_market.py
