[tool.poetry]
name = "pacifica-sdk"
version = "0.2.0"
description = "Python SDK for Pacifica trading platform"
authors = ["Hubert <hubertkirch.ai@gmail.com>"]
readme = "README.md"
packages = [{include = "pacifica"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
solders = "^0.19.0"
websockets = "^10.4"
base58 = "^2.1.1"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"